# Novelist

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
app/: App.svelte  app.css  main.ts  vite-env.d.ts
app/lib/: app-commands.ts  conflict-handlers.ts  themes.ts  updater.ts
app/lib/components/: AiAgentPanel.svelte  AiTalkPanel.svelte  CommandPalette.svelte  ConflictDialog.svelte  DraftNote.svelte  Editor.svelte  FileTreeNode.svelte  MindmapOverlay.svelte  MoveFilePalette.svelte  NewProjectDialog.svelte  Outline.svelte  PluginFileEditor.svelte  PluginPanel.svelte  Settings.svelte  Sidebar.svelte  TemplateDialog.svelte  TemplatePanel.svelte  UnsavedChangesDialog.svelte  VirtualScrollbar.svelte  Welcome.svelte
app/lib/composables/: app-events.svelte.ts  app-lifecycle.svelte.ts  app-shortcuts.svelte.ts  close-tab.svelte.ts  editor-context-menu.svelte.ts  unsaved-prompt.svelte.ts  window-title.svelte.ts
app/lib/editor/: formatting.ts  languages.ts  large-file.ts  markdown-extensions.ts  math.ts  mermaid.ts  outline.ts  selection-line.ts  setup.ts  slash-commands.ts  table.ts  viewport.ts  wysiwyg.css  wysiwyg.ts  zen.ts
app/lib/i18n/: index.svelte.ts
app/lib/ipc/: commands.ts
app/lib/services/: new-file.ts  plugin-panel-bridge.ts
app/lib/stores/: commands.svelte.ts  extensions.svelte.ts  new-file-settings.svelte.ts  plugin-settings.svelte.ts  project.svelte.ts  settings.svelte.ts  shortcuts.svelte.ts  tabs.svelte.ts  ui.svelte.ts
app/lib/utils/: benchmark.ts  chinese.ts  go-to-line.ts  markdown-copy.ts  numbering.ts  placeholder.ts  plugin-bridge.ts  resize-drag.ts  scratch.ts  scroll-edit-test.ts  startup-timing.ts  typora-theme.ts  window-drag.ts  wordcount.ts
core/: Cargo.toml  build.rs  tauri.conf.json
core/bundled-templates/: chapter-skeleton.md  characters.md  outline.md  worldbuilding.md
core/capabilities/: default.json
core/src/: lib.rs
core/src/commands/: ai_bridge.rs  bench.rs  claude_bridge.rs  file.rs  mod.rs  plugin.rs  recent.rs  settings.rs  template.rs  template_files.rs
core/src/models/: file_state.rs  mod.rs  plugin.rs  project.rs  settings.rs
core/src/services/: sync.rs  webdav.rs
core/src/services/plugin_host/: sandbox.rs
design/: P3-technical-plans.md  design-overview.md  scroll-stabilizer-bug.md
docs/: creating-plugins.md  development.md  keyboard-shortcuts.md
docs/architecture/: editor.md  feature-boundaries.md  file-lifecycle.md  plugin-system.md  refactor-plan-2026-04-20.md  settings.md  startup-instrumentation.md  testing-precision.md  testing.md
docs/superpowers/plans/: 2026-04-07-novelist-phase2-wysiwyg.md  2026-04-07-novelist-phase3-file-management.md  2026-04-07-novelist-phase4-writing-features.md  2026-04-19-project-new-file-naming.md  2026-04-20-snapshot-retention-webdav.md  2026-04-21-test-hierarchy-p1.md  2026-04-22-coverage-campaign.md  2026-04-22-unsaved-dismiss.md
docs/superpowers/specs/: 2026-04-17-sidebar-tree-and-plugins-design.md  2026-04-19-project-new-file-naming-design.md  2026-04-20-ai-plugins-design.md  2026-04-20-snapshot-retention-webdav-design.md  2026-04-20-template-files-panel-design.md  2026-04-21-coverage-campaign-design.md  2026-04-21-icon-component-system-design.md  2026-04-21-test-hierarchy-and-coverage-design.md  2026-04-22-unsaved-dismiss-design.md
plugins/canvas/: index.html  manifest.toml  package.json  pnpm-lock.yaml  vite.config.ts
plugins/canvas/src/: App.svelte
plugins/kanban/: index.html  manifest.toml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
plugins/kanban/src/: App.svelte
plugins/mindmap/: index.html  manifest.toml  package.json  pnpm-lock.yaml  vite.config.ts
plugins/mindmap/src/: main.ts
scripts/: create-dmg.sh
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: draft.rs  export.rs  file.rs  mod.rs  plugin.rs  project.rs  recent.rs  snapshot.rs  stats.rs  sync.rs
src-tauri/src/models/: file_state.rs  mod.rs  plugin.rs  project.rs
src-tauri/src/services/: file_watcher.rs  mod.rs  pandoc.rs  rope_benchmark.rs  rope_document.rs  snapshots.rs  sync.rs  webdav.rs  writing_stats.rs
src-tauri/src/services/plugin_host/: sandbox.rs
src/lib/components/: CanvasEditor.svelte  CanvasTextNode.svelte  CommandPalette.svelte  ConflictDialog.svelte  Editor.svelte  ErrorBoundary.svelte  ExportDialog.svelte  MindmapPanel.svelte  Outline.svelte  PluginFileEditor.svelte  PluginPanel.svelte  ProjectSearch.svelte  Settings.svelte  Sidebar.svelte  SnapshotPanel.svelte  StatsPanel.svelte  StatusBar.svelte  TabBar.svelte  Welcome.svelte  ZenMode.svelte
src/lib/editor/: annotations.ts  ime-guard.ts  outline.ts  scroll-stabilizer.test.ts  section-move.ts  setup.ts  wysiwyg.css  wysiwyg.ts  zen.ts
src/lib/i18n/: index.ts  types.ts
src/lib/ipc/: commands.ts
src/lib/stores/: extensions.svelte.ts  project.svelte.ts  shortcuts.svelte.ts  shortcuts.test.ts  tabs.svelte.ts  ui.svelte.ts
src/lib/utils/: typora-theme.test.ts  wordcount.ts
tests/: COVERAGE-AUDIT.md  COVERAGE-BASELINE.md  COVERAGE.md
tests/bench/: README.md  bundle-size.sh
tests/e2e/: test-all-features.sh  test-e2e-auto.sh  test-integrity.sh  test-scroll-click.sh  test-scroll-edit-line.sh
tests/e2e/fixtures/: app-fixture.ts  mock-data.ts  tauri-mock.ts
tests/e2e/specs/: ai-panels.spec.ts  editor-context-menu.spec.ts  kanban.spec.ts  move-palette.spec.ts  new-file-naming.spec.ts  settings.spec.ts  sidebar-context-menu.spec.ts
tests/integration/: README.md
tests/integration/editor/: slash-runtime.test.ts  wysiwyg-runtime.test.ts
tests/unit/: app-commands.test.ts  i18n.test.ts
tests/unit/components/: ai-agent-host.test.ts  ai-agent-settings-store.test.ts  ai-talk-cleanup.test.ts  ai-talk-host.test.ts  ai-talk-openai.test.ts  ai-talk-presets.test.ts  ai-talk-prompt-presets.test.ts  ai-talk-sessions.test.ts  (+1 more)
(+82 files in other folders)
