[package]
name = "novelist"
version = "0.1.0"
description = "A desktop writing app for novelists"
authors = ["Chivier Humber"]
edition = "2021"

[lib]
name = "novelist_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "process"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# TODO: upgrade to stable when tauri-specta 2.0.0 is released
tauri-specta = { version = "=2.0.0-rc.24", features = ["typescript"] }
specta = { version = "=2.0.0-rc.24", features = ["function", "derive", "tokio"] }
notify = { version = "7", features = ["macos_fsevent"] }
blake3 = "1"
ropey = "1"
dirs = "6"
rquickjs = { version = "0.9", features = ["bindgen", "loader", "parallel"] }
tauri-plugin-playwright = { version = "0.2", optional = true }
walkdir = "2"
chardetng = "1"
encoding_rs = "0.8"
base64 = "0.22"
once_cell = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
futures-util = "0.3"
url = "2"
specta-typescript = { version = "0.0.11", optional = true }

[features]
default = ["sync"]
dev = ["tauri/devtools", "codegen"]
codegen = ["dep:specta-typescript"]
sync = []
e2e-testing = ["dep:tauri-plugin-playwright"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "unwind"

[dev-dependencies]
tempfile = "3"
