[package]
name = "novelist"
version = "0.0.3"
description = "A desktop writing app for novelists"
authors = ["Chivier Humber"]
edition = "2021"

[lib]
name = "novelist_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "process"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-specta = { version = "=2.0.0-rc.24", features = ["typescript"] }
specta = { version = "=2.0.0-rc.24", features = ["function", "derive", "tokio"] }
specta-typescript = "0.0.11"
notify = { version = "7", features = ["macos_fsevent"] }
blake3 = "1"
ropey = "1"
dirs = "6"
rquickjs = { version = "0.9", features = ["bindgen", "loader", "parallel"] }
walkdir = "2"
reqwest = { version = "0.12", features = ["rustls-tls"] }

[features]
default = []
dev = ["tauri/devtools"]

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
tempfile = "3"
